[package]
name = "llm-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
derive_builder = "0.12.0"
reqwest = { version = "0.11.22", default-features = false, features = ["rustls-tls", "json", "gzip"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"

[dev-dependencies]
tokio = { version = "1.34.0", features = ["rt", "rt-multi-thread", "macros"] }
