[package]
name = "llm-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.74"
bytes = "1.5.0"
derive_builder = "0.12.0"
reqwest = { version = "0.11.22", default-features = false, features = [
  "gzip",
  "json",
  "multipart",
  "rustls-tls",
] }
schemars = "0.8.16"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
strum = { version = "0.25.0", features = ["derive"] }
tracing = "0.1.40"

[dev-dependencies]
ctor = "0.2.5"
tokio = { version = "1.34.0", features = ["rt", "rt-multi-thread", "macros"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
