[package]
name = "llm-sdk"
version = "0.3.1"
edition = "2021"
license = "MIT"
documentation = "https://docs.rs/llm-sdk"
repository = "https://github.com/tyrchen/llm-sdk"
homepage = "https://github.com/tyrchen/llm-sdk"
description = """
A simple SDK for OpenAI compatible API.
"""
readme = "README.md"
categories = ["API bindings"]
keywords = ["openai", "llm", "sdk"]

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.74"
bytes = "1.5.0"
derive_builder = "0.12.0"
reqwest = { version = "0.11.22", default-features = false, features = [
  "gzip",
  "json",
  "multipart",
  "rustls-tls",
] }
reqwest-middleware = "0.2.4"
reqwest-retry = "0.3.0"
reqwest-tracing = "0.4.6"
schemars = "0.8.16"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
strum = { version = "0.25.0", features = ["derive"] }
task-local-extensions = "0.1.4"
tracing = "0.1.40"

[dev-dependencies]
ctor = "0.2.5"
lazy_static = "1.4.0"
tokio = { version = "1.34.0", features = ["rt", "rt-multi-thread", "macros"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
